--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "27.0.2",
     "@types/node": "^18.7.23",
-    "glob": "10.2.2",
     "jest": "27.2.3",
+    "luxon": "^3.3.0",
     "prettier": "2.7.1",
     "ts-jest": "27.0.5",
-    "typescript": "4.5.5",
-    "luxon": "^3.3.0"
+    "typescript": "4.5.5"
   }
 }
