--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install Cypress
         run: npx cypress install
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - name: Affected Regression Tests
         uses: collaborationFactory/github-actions/.github/actions/run-many@master
         with:
