--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -36,11 +36,12 @@ jobs:
         id: npm-cache
         uses: actions/cache@v4
         with:
-          path: '**/node_modules'
+          path: |
+            **/node_modules
+            !/home/runner/.cache/Cypress
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-modules-
-          exclude: '/home/runner/.cache/Cypress'  # Exclude Cypress cache
 
       - name: Install Cypress Binary
         run: npx cypress install
