--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -28,10 +28,10 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Formatter
-        run: node_modules/.bin/nx format:check --base=origin/${{ github.event.pull_request.base.ref }}
+        run: npx nx format:check --base=origin/${{ github.event.pull_request.base.ref }}
 
       - name: Linter
-        run: node_modules/.bin/nx affected --target=lint --parallel --configuration=dev --base=origin/${{ github.event.pull_request.base.ref }}
+        run: npx nx affected --target=lint --parallel --configuration=dev --base=origin/${{ github.event.pull_request.base.ref }}
 
       - name: Unit Tests
         uses: collaborationFactory/github-actions/.github/actions/run-many@master
