--- a/.github/workflows/fe-licenses.yml
+++ b/.github/workflows/fe-licenses.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Check Licenses Local
         id: localLicenseChecker
         continue-on-error: true
-        run: node_modules/.bin/nx run cf-frontend-licenses:check
+        run: npx nx run cf-frontend-licenses:check
 
       - name: Check Licenses Remote
         if: steps.localLicenseChecker.outcome == 'failure'
