--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -16,6 +16,9 @@ on:
 jobs:
   e2e:
     runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:latest
+      options: --user 1001
     timeout-minutes: 120
     strategy:
       matrix:
