--- a/.github/workflows/fe-vrt.yml
+++ b/.github/workflows/fe-vrt.yml
@@ -51,6 +51,8 @@ jobs:
 
       - name: Helles UI Visual Regression Testing
         run: npx nx run helles-ui:vrt
+        env:
+          WAIT_ON_TIMEOUT: 600000
 
       - name: Upload VRT Reports
         uses: actions/upload-artifact@v4
